Issue #14849: setup Element data members to be assignable in subclasses